[gd_scene load_steps=10 format=2]

[ext_resource path="res://characters/demon/commen/demon.tscn" type="PackedScene" id=1]
[ext_resource path="res://characters/demon/fireBallDemon/fireBallDemon.gd" type="Script" id=2]

[sub_resource type="SpatialMaterial" id=6]
albedo_color = Color( 0.292969, 0.228882, 0.228882, 1 )

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0.807843, 0.109804, 0.0392157, 1 )

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="SphereMesh" id=3]
radius = 0.1
height = 0.2

[sub_resource type="SpatialMaterial" id=7]
flags_transparent = true
flags_unshaded = true
albedo_color = Color( 0.870588, 0.498039, 0.0627451, 0.72549 )

[sub_resource type="Animation" id=1]
length = 0.001

[sub_resource type="Animation" id=2]
resource_name = "attack"
tracks/0/type = "value"
tracks/0/path = NodePath("KinematicBody/mesh/demon/eyes:material/0:albedo_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 0, 0, 1 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("KinematicBody/mesh/demon/fireBallSpawn/MeshInstance:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("KinematicBody/mesh/demon/fireBallSpawn/MeshInstance:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "spawnFireBall"
} ]
}

[node name="fireBallDemon" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="KinematicBody" parent="." index="0"]
speed = 1

[node name="demon" parent="KinematicBody/mesh" index="0"]
transform = Transform( -0.6, -5.24537e-08, -9.05975e-08, -5.24537e-08, 0.6, -2.29283e-15, 9.05975e-08, 5.62746e-15, -0.6, 0, 1.2, 0 )

[node name="body" parent="KinematicBody/mesh/demon" index="0"]
transform = Transform( 1, 1.4162e-21, 0, 1.41621e-21, 1, -8.47033e-22, 0, -8.47033e-22, 1, 0, 0, 0 )
material/0 = SubResource( 6 )

[node name="Cube" parent="KinematicBody/mesh/demon" index="2"]
transform = Transform( 1, -3.55271e-15, 0, 1.41621e-21, 0.96516, 0.26166, 0, -0.26166, 0.96516, 0, -0.169118, 0.410902 )
material/0 = SubResource( 4 )

[node name="horns" parent="KinematicBody/mesh/demon" index="3"]
material/0 = SubResource( 5 )

[node name="fireBallSpawn" type="Spatial" parent="KinematicBody/mesh/demon" index="7"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.89259e-08, -0.34518, 0.457645 )

[node name="MeshInstance" type="MeshInstance" parent="KinematicBody/mesh/demon/fireBallSpawn" index="0"]
visible = false
mesh = SubResource( 3 )
material/0 = SubResource( 7 )

[node name="deathEffect" parent="KinematicBody/mesh" index="1"]
transform = Transform( -0.6, -5.24537e-08, -9.05975e-08, -5.24537e-08, 0.6, -2.29283e-15, 9.05975e-08, 5.62746e-15, -0.6, 0, 1.2, 0 )

[node name="hitBoxes" parent="KinematicBody" index="3"]
transform = Transform( -0.6, -5.24537e-08, -9.05975e-08, -5.24537e-08, 0.6, -2.29283e-15, 9.05975e-08, 5.62746e-15, -0.6, 0, 1.2, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="4"]
anims/RESET = SubResource( 1 )
anims/attack = SubResource( 2 )

[node name="attackCoolDown" type="Timer" parent="." index="5"]
wait_time = 2.0

[connection signal="timeout" from="attackCoolDown" to="." method="_on_attackCoolDown_timeout"]

[editable path="KinematicBody/mesh/demon"]
[editable path="KinematicBody/hitBoxes"]
[editable path="lookAt"]
